@@ -1,4 +1,4 @@
-(<table>{
+<table>{
   for $y in 1 to 10 return (
     <tr>{
       for $x in 1 to 10 return
@@ -13,5 +13,4 @@
     "
 ")
 }</table>,"
-")
-
+"
